# cr4wlr

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  JOURNAL.md  README-first.md  README.md  ROADMAP.md  SPONSORS.md  check_remaining_refs.py  copilot_api.py  copilot_testbench.py  docker-compose.yml  fix_test_imports.py  github_issue_auto.py  krauler_cli.py  mkdocs.yml  pyproject.toml  rename_cr4wlr_to_krauler.py  rename_package.py  replace_test_imports.py  restructure_to_src.py  scan_cr4wlr.py  setup.py  ui_scraper.py  ui_streamlit.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  main-release.yml  release.yml  rename-check.yml
cr4wlr/: __init__.py  __version__.py  adaptive_crawler copy.py  adaptive_crawler.py  async_configs.py  async_crawler_strategy.back.py  async_crawler_strategy.py  async_database.py  async_url_seeder.py  async_webcrawler.py  browser_manager.py  browser_profiler.py  chunking_strategy.py  cli.py  hub.py  install.py  migrations.py  model_loader.py  proxy_strategy.py  utils.py
cr4wlr/deep_crawling/: crazy.py
cr4wlr/legacy/: crawler_strategy.py  database.py  docs_manager.py  llmtxt.py  version_manager.py  web_crawler.py
cr4wlr/script/: c4ai_script.py
deploy/docker/: README.md  api.py  c4ai-code-context.md  c4ai-doc-context.md  crawler_pool.py  server.py
docs/blog/: release-v0.7.0.md  release-v0.7.1.md  release-v0.7.3.md  release-v0.7.4.md
krauler/: __init__.py  __version__.py  adaptive_crawler copy.py  adaptive_crawler.py  async_configs.py  async_crawler_strategy.back.py  async_crawler_strategy.py  async_database.py  async_url_seeder.py  async_webcrawler.py  browser_manager.py  browser_profiler.py  chunking_strategy.py  cli.py  hub.py  install.py  migrations.py  model_loader.py  proxy_strategy.py  utils.py
prompts/: prompt_net_requests.md
tests/: check_dependencies.py  docker_example.py  test_arun_many.py  test_cli_docs.py  test_config_matching_only.py  test_config_selection.py  test_link_extractor.py  test_llm_simple_url.py  test_llmtxt.py  test_memory_macos.py  test_multi_config.py  test_normalize_url.py  test_scraping_strategy.py  test_virtual_scroll.py  test_web_crawler.py
ui/: app.py
(+286 files in other folders)
